# LinuxApplicationDevelopment2025

./: README.md
01_TerminalProject/: Makefile  Show  Show.c
02_Multifile/: .gitignore  Makefile
03_Text/: randomize.sh
04_Debugging/: Makefile  flow1.gdb  flow2.gdb  range.c  reference1.txt  reference2.txt
05_Regexps/: Makefile  esub.c
07_Environmental/: .gitignore  Makefile.am  autogen.sh  configure.ac  rhasher.c
08_I18n/: CMakeLists.txt
08_I18n/po/: CMakeLists.txt  ru.po
08_I18n/src/: CMakeLists.txt  binsearch.c
09_PatchDiff/: .gitignore  Makefile  main.c  patch1.patch  patch2.patch  patch3.patch
10_LibTesting/: CMakeLists.txt  lib.c  lib.h  test_basic.c  test_grow_trunc.c  test_push_pop.c
11_Documenting/: .gitignore  CMakeLists.txt  Doxyfile.in
11_Documenting/docs/: CMakeLists.txt  binsearch.1.in
11_Documenting/po/: CMakeLists.txt  ru.po
11_Documenting/src/: CMakeLists.txt  binsearch.c
12_InstallPackaging/: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  cmake_uninstall.cmake.in
12_InstallPackaging/man/: CMakeLists.txt  mastermind.1.in
12_InstallPackaging/po/: CMakeLists.txt  en.po  mastermind.pot  ru.po
12_InstallPackaging/src/: CMakeLists.txt  main.c
12_InstallPackaging/src/lib/: CMakeLists.txt  mastermind.c  mastermind.h
12_InstallPackaging/tests/: CMakeLists.txt  test_basic.c  test_in_output.c
